test/classes/initializers/compilerGenerated/constructorChild.good
constructorChild.chpl:10: error: Cannot create default constructor on type 'Child', which inherits from a type that defines an initializer
